--- a/app/src/main/res/layout/activity_placein_trip.xml
+++ b/app/src/main/res/layout/activity_placein_trip.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_gravity="bottom"
-    android:background="@drawable/dialog_background"
+    android:background="@drawable/rauche_rock"
     >
     <TextView
         android:layout_width="wrap_content"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="400dp"
         android:orientation="horizontal">
         <Button
             android:layout_width="wrap_content"
