--- a/app/src/main/res/layout/activity_city.xml
+++ b/app/src/main/res/layout/activity_city.xml
@@ -28,6 +28,7 @@
         android:scrollbars="vertical"
         android:layout_marginTop="70dp"
         android:layout_marginBottom="75dp"
+        android:paddingBottom="56dp"
         />
 
     <androidx.recyclerview.widget.RecyclerView
