--- a/app/src/main/res/layout/activity_edit_memory.xml
+++ b/app/src/main/res/layout/activity_edit_memory.xml
@@ -29,8 +29,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="10dp"
-            android:background="@drawable/upload">
+            >
+
         </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/MoreMemories"
+            android:layout_marginTop="10dp"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text="+more images or videos"/>
 
         <LinearLayout
             android:layout_width="match_parent"
