--- a/app/src/main/res/layout/activity_places_details.xml
+++ b/app/src/main/res/layout/activity_places_details.xml
@@ -28,10 +28,10 @@
                 android:id="@+id/Location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="50dp"
                 android:background="@null"
                 android:padding="10dp"
-                android:src="@drawable/placeholder" />
+               android:src="@drawable/baseline_location_on_24" />
 
             <ImageButton
                 android:id="@+id/AddToTrip"
@@ -40,7 +40,7 @@
                 android:layout_below="@+id/Location"
                 android:background="@null"
                 android:padding="10dp"
-                android:src="@drawable/add" />
+                android:src="@drawable/baseline_card_travel_24" />
 
             <ImageButton
                 android:id="@+id/AddToFavorite"
@@ -49,7 +49,7 @@
                 android:layout_below="@+id/AddToTrip"
                 android:background="@null"
                 android:padding="10dp"
-                android:src="@drawable/heart" />
+                android:src="@drawable/baseline_favorite_border_24_place" />
 
             <LinearLayout
                 android:id="@+id/indicatorLayout"
@@ -76,6 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
             android:text="Rate:" />
 
         <TextView
@@ -97,12 +98,14 @@
                 android:id="@+id/Description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="Place Description" />
             <TextView
                 android:id="@+id/RateThePlace"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Rate The Place"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"/>
 
             <!-- RatingBar placed directly under Description -->
@@ -120,6 +123,7 @@
                 android:id="@+id/Review_RecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp" />
             <TextView
                 android:layout_width="wrap_content"
@@ -128,7 +132,7 @@
                 android:id="@+id/AllReviews"
                 />
 
-            <!-- EditText and Button below RecyclerView -->
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -138,8 +142,10 @@
                 <EditText
                     android:id="@+id/ReviewText"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
+                    android:textAlignment="center"
                     android:layout_weight="1"
+                    android:background="@drawable/back_border"
                     android:hint="Write a review" />
 
                 <Button
