--- a/app/src/main/res/layout/activity_tourism_places.xml
+++ b/app/src/main/res/layout/activity_tourism_places.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/rauche_rock"
     tools:context=".Activities.TourismPlaces"
     >
     <androidx.appcompat.widget.SearchView
@@ -21,10 +22,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/PlacerecyclerView"
         android:scrollbars="vertical"
-        android:layout_marginTop="70dp"/>
+        android:layout_marginTop="70dp"
+        android:paddingBottom="130dp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/Addplace"
@@ -32,11 +34,20 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="40dp"
-        android:backgroundTint="@color/lavender"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="90dp"
+        android:backgroundTint="@color/dark_blue"
         android:src="@drawable/baseline_add_24"
         android:tint="@color/white" />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/transparent"
+        app:itemIconTint="#5A93C5"
+        app:itemBackground="@drawable/icon_border"
+        app:itemIconSize="35dp"
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/bottom_nav_menu"/>
 </RelativeLayout>
