--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -28,7 +28,7 @@
             android:text="Upload Data"
             android:textSize="30sp"
             android:textAlignment="center"
-            android:textColor="@color/lavender"/>
+/>
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
@@ -46,7 +46,7 @@
             android:padding="16dp"
             android:hint="Enter a city name"
             android:gravity="start|center_vertical"
-            android:textColor="@color/lavender"
+
             />
         <EditText
             android:layout_width="match_parent"
@@ -57,7 +57,7 @@
             android:padding="16dp"
             android:hint="Enter Description"
             android:gravity="start|center_vertical"
-            android:textColor="@color/lavender"
+
             />
         <EditText
             android:layout_width="match_parent"
@@ -68,7 +68,7 @@
             android:padding="16dp"
             android:hint="Enter Area"
             android:gravity="start|center_vertical"
-            android:textColor="@color/lavender"
+
             />
         <Button
             android:layout_width="match_parent"
@@ -76,6 +76,7 @@
             android:text="Save"
             android:id="@+id/saveButton"
             android:layout_marginTop="20dp"
+            android:backgroundTint="@color/dark_blue"
             app:cornerRadius = "20dp"/>
 
     </LinearLayout>
