--- a/app/src/main/res/layout/dialog_add_trip.xml
+++ b/app/src/main/res/layout/dialog_add_trip.xml
@@ -17,28 +17,31 @@
         />
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:id="@+id/Name"
         android:layout_marginTop="20dp"
+        android:layout_gravity="center"
         android:hint="Trip Name"/>
 
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:inputType="none"
         android:focusableInTouchMode="false"
         android:hint="Trip Date"
         android:layout_marginTop="20dp"
+        android:layout_gravity="center"
         android:id="@+id/Date"/>
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:id="@+id/NbDays"
         android:hint="Number of Days"
         android:layout_marginTop="20dp"
+        android:layout_gravity="center"
         android:inputType="number"/>
 
 
@@ -49,6 +52,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/dark_blue"
         android:text="Create New Trip"/>
 
 
