--- a/app/src/main/res/layout/dialog_request_trip.xml
+++ b/app/src/main/res/layout/dialog_request_trip.xml
@@ -24,10 +24,11 @@
         />
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:id="@+id/TripCode"
         android:layout_marginTop="20dp"
+        android:layout_gravity="center"
         android:hint="Enter Trip Code"/>
     <TextView
         android:layout_width="wrap_content"
@@ -43,7 +44,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
-        android:text="Send Request"/>
+        android:text="Send Request"
+        android:backgroundTint="@color/dark_blue"/>
 
 
 
