--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -1,65 +1,81 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/recCard"
-    android:layout_marginStart="12dp"
-    android:layout_marginEnd="12dp"
-    android:layout_marginHorizontal="10dp"
-    android:layout_marginVertical="10dp"
-    app:cardCornerRadius="20dp"
-    app:cardElevation="8dp">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:id="@+id/recCard">
+
     <com.google.android.material.imageview.ShapeableImageView
-        android:layout_width="70dp"
-        android:layout_height="60dp"
+        android:layout_width="160dp"
+        android:layout_height="110dp"
         android:id="@+id/recImage"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:padding="8dp"
         android:scaleType="fitXY"
         android:src="@drawable/upload"
-        />
-    
+        android:layout_marginStart="10dp"
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RoundedCorners" />
+
     <TextView
         android:layout_width="120dp"
         android:layout_height="30dp"
         android:id="@+id/recTitle"
         android:text="Title"
-        android:textColor="@color/lavender"
         android:textSize="20sp"
         android:layout_toEndOf="@+id/recImage"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"/>
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="40dp" />
 
     <TextView
+        android:id="@+id/Area"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:id="@+id/recCat"
+        android:layout_below="@id/recTitle"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_toEndOf="@+id/recImage"
         android:text="Area"
-        android:textColor="@color/lavender"
-        android:textSize="16sp"
         android:textAlignment="center"
-        android:layout_toEndOf="@+id/recImage"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="200dp"/>
+        android:textSize="16sp" />
 
-    <TextView
-        android:layout_width="140dp"
-        android:layout_height="12dp"
-        android:id="@+id/recDesc"
-        android:text="Description"
-        android:textColor="@color/lavender"
-        android:textSize="8sp"
+    <ImageButton
+        android:id="@+id/EditCity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="-22dp"
+        android:layout_marginTop="26dp"
+        android:layout_toRightOf="@+id/recTitle"
+        android:background="@drawable/edit" />
+
+    <ImageButton
+        android:id="@+id/DeleteCity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Area"
+        android:layout_marginStart="133dp"
+        android:layout_marginLeft="-16dp"
+        android:layout_marginTop="-33dp"
         android:layout_toEndOf="@+id/recImage"
-        android:layout_below="@+id/recTitle"
-        android:layout_marginTop="20dp"
-        android:maxLines="0"
-        android:layout_marginStart="20dp"/>
+        android:layout_toRightOf="@+id/EditCity"
+        android:background="@drawable/delete" />
+
+    <View
+        android:layout_width="355dp"
+        android:layout_height="3dp"
+        android:layout_below="@id/Area"
+        android:layout_marginTop="35dp"
+        android:layout_marginLeft="15dp"
+        android:background="?android:attr/listDivider"
+         />
+
+    <ImageView
+        android:id="@+id/EditPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="190dp"
+        android:layout_marginTop="70dp"
+        android:layout_toEndOf="@+id/recImage"
+        android:background="@drawable/baseline_arrow_forward_ios_24" />
 
 </RelativeLayout>
-</androidx.cardview.widget.CardView>
