--- a/app/src/main/res/layout/requirements_recycleritem.xml
+++ b/app/src/main/res/layout/requirements_recycleritem.xml
@@ -8,6 +8,7 @@
         android:id="@+id/RequirementsCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:buttonTint="@color/dark_blue"
         />
     <EditText
         android:id="@+id/RequirementsText"
