--- a/app/src/main/res/layout/selectingplaces_recycleritem.xml
+++ b/app/src/main/res/layout/selectingplaces_recycleritem.xml
@@ -40,8 +40,9 @@
             />
         <CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/placeCheckbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+           android:buttonTint="@color/blue"
             />
 
 
