--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,13 +3,18 @@
     <style name="Base.Theme.YalaTour" parent="Theme.Material3.DayNight.NoActionBar">
 
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/dark_blue</item>
     </style>
 
     <style name="Theme.YalaTour" parent="Base.Theme.YalaTour" />
     <style name="RoundedImageViewRounded">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50dp</item>
+        <item name="colorPrimary">@color/dark_blue</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimaryContainer">@color/white</item>
+         <item name="statusBarScrim" > @color/dark_blue</item>
+
 
     </style>
 </resources>
