--- a/app/src/main/res/layout/activity_places_details.xml
+++ b/app/src/main/res/layout/activity_places_details.xml
@@ -4,12 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/img_1"
     tools:context=".DetailsActivity.PlacesDetails">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/dark_blue">
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_arrow_back_24"
+                android:background="@null"
+                android:layout_marginTop="7dp"
+                android:layout_marginLeft="10dp"
+                android:id="@+id/BackButton"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Place Details"
+                android:textSize="23sp"
+                android:textStyle="bold"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/white"
+                />
+        </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/PlaceImageView"
