--- a/app/src/main/res/layout/activity_selecting_places.xml
+++ b/app/src/main/res/layout/activity_selecting_places.xml
@@ -29,7 +29,7 @@
             android:textStyle="bold"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             />
     </LinearLayout>
 
@@ -41,7 +41,7 @@
         android:background="@drawable/search_style"
         app:iconifiedByDefault="false"
         app:queryHint="Search Places.."
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="60dp"
         />
     <TextView
