--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -7,9 +7,11 @@
     android:layout_height="match_parent"
     android:background="@drawable/rauche_rock"
     tools:context=".DetailsActivity.TripDetails">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:id="@+id/layout"
         android:background="@color/dark_blue">
         <ImageButton
             android:layout_width="wrap_content"
@@ -18,8 +20,7 @@
             android:background="@null"
             android:layout_marginTop="7dp"
             android:layout_marginLeft="10dp"
-            android:id="@+id/BackButton"
-            />
+            android:id="@+id/BackButton" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,206 +29,204 @@
             android:textStyle="bold"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
-            />
+            android:textColor="@color/white" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="56dp"
+        android:layout_below="@+id/layout"
+        android:layout_marginTop="10dp">
 
-
-        <LinearLayout
+        <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="56dp">
+            android:scrollbars="none"
+            android:id="@+id/CategoryScroll">
 
-
-            <HorizontalScrollView
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scrollbars="none"
-                android:id="@+id/CategoryScroll"
-                android:layout_marginTop="60dp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/Places"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="Places"
-                        android:clickable="true"
-                        android:onClick="onCategoryClick" />
-                    <TextView
-                        android:id="@+id/Requirements"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="Requirements"
-                        android:clickable="true"
-                        android:onClick="onCategoryClick" />
-                    <TextView
-                        android:id="@+id/Members"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="Members"
-                        android:clickable="true"
-                        android:onClick="onCategoryClick" />
-                    <TextView
-                        android:id="@+id/Requests"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="Requests"
-                        android:clickable="true"
-                        android:onClick="onCategoryClick" />
-                    <TextView
-                        android:id="@+id/MyRequirements"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="My Requirements"
-                        android:clickable="true"
-                        android:onClick="onCategoryClick" />
-                    <TextView
-                        android:id="@+id/Memories"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="Memories"
-                        android:clickable="true"
-                        android:onClick="onCategoryClick" />
-                </LinearLayout>
-            </HorizontalScrollView>
-
-            <!-- Data Container -->
-            <RelativeLayout
-                android:id="@+id/data_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/Addplace"
-                    android:layout_width="180dp"
-                    android:layout_height="35dp"
-                    android:text="+Add Places"
-                    android:background="@drawable/back_border"
-                    android:textSize="23sp"
-                    android:textAlignment="center"
-                    android:textColor="@color/dark_blue"
-                    android:textStyle="bold"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginTop="10dp"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/PlacerecyclerView"
-                    android:scrollbars="vertical"
-                    android:layout_below="@id/Addplace"
-                    android:layout_marginTop="10dp"
-                    android:clipToPadding="false"
-                    android:paddingBottom="56dp"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/Addplace"
-                    android:layout_marginTop="10dp"
-                    android:visibility="gone"
-                    android:id="@+id/RequirementsRecyclerView"
-                    android:clipToPadding="false"
-                    android:paddingBottom="56dp"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/Addplace"
-                    android:layout_marginTop="10dp"
-                    android:visibility="gone"
-                    android:id="@+id/RequestsRecyclerView"
-                    android:clipToPadding="false"
-                    android:paddingBottom="56dp"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/Addplace"
-                    android:layout_marginTop="10dp"
-                    android:visibility="gone"
-                    android:id="@+id/MembersRecyclerView"
-                    android:clipToPadding="false"
-                    android:paddingBottom="56dp"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/Addplace"
-                    android:layout_marginTop="10dp"
-                    android:visibility="gone"
-                    android:id="@+id/MyRequirementsRecyclerView"
-                    android:clipToPadding="false"
-                    android:paddingBottom="56dp"/>
-
-                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/Places"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/Addplace"
-                    android:layout_marginTop="10dp"
-                    android:visibility="gone"
-                    android:id="@+id/MemoriesTextRecyclerView" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/MemoriesTextRecyclerView"
-                    android:layout_marginTop="10dp"
-                    android:visibility="gone"
-                    android:id="@+id/MemoriesImageRecyclerView"
-
-                    />
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/MemoriesImageRecyclerView"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:visibility="gone"
-                    android:id="@+id/MemoriesVideoRecyclerView"
-                    android:clipToPadding="false"
-                    android:paddingBottom="56dp"/>
-
-                <!-- Buttons and FAB -->
-                <Button
+                    android:layout_marginLeft="10dp"
+                    android:text="Places"
+                    android:clickable="true"
+                    android:onClick="onCategoryClick" />
+                <TextView
+                    android:id="@+id/Requirements"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Save"
-                    android:id="@+id/Save"
-                    android:visibility="gone"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_margin="16dp"
-                   />
-
-                <Button
+                    android:layout_marginLeft="10dp"
+                    android:text="Requirements"
+                    android:clickable="true"
+                    android:onClick="onCategoryClick" />
+                <TextView
+                    android:id="@+id/Members"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Save"
-                    android:id="@+id/SaveMyRequirements"
-                    android:visibility="gone"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_margin="16dp"
-                    />
-            </RelativeLayout>
-        </LinearLayout>
+                    android:layout_marginLeft="10dp"
+                    android:text="Members"
+                    android:clickable="true"
+                    android:onClick="onCategoryClick" />
+                <TextView
+                    android:id="@+id/Requests"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Requests"
+                    android:clickable="true"
+                    android:onClick="onCategoryClick" />
+                <TextView
+                    android:id="@+id/MyRequirements"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="My Requirements"
+                    android:clickable="true"
+                    android:onClick="onCategoryClick" />
+                <TextView
+                    android:id="@+id/Memories"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Memories"
+                    android:clickable="true"
+                    android:onClick="onCategoryClick" />
+            </LinearLayout>
+        </HorizontalScrollView>
 
+        <RelativeLayout
+            android:id="@+id/data_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/Addplace"
+                android:layout_width="180dp"
+                android:layout_height="35dp"
+                android:text="+Add Places"
+                android:background="@drawable/back_border"
+                android:textSize="23sp"
+                android:textAlignment="center"
+                android:textColor="@color/dark_blue"
+                android:textStyle="bold"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="10dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/PlacerecyclerView"
+                android:scrollbars="vertical"
+                android:layout_below="@id/Addplace"
+                android:layout_marginTop="10dp"
+                android:clipToPadding="false"
+                android:paddingBottom="56dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/Addplace"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:id="@+id/RequirementsRecyclerView"
+                android:clipToPadding="false"
+                android:paddingBottom="56dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/Addplace"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:id="@+id/RequestsRecyclerView"
+                android:clipToPadding="false"
+                android:paddingBottom="56dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/Addplace"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:id="@+id/MembersRecyclerView"
+                android:clipToPadding="false"
+                android:paddingBottom="56dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/Addplace"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:id="@+id/MyRequirementsRecyclerView"
+                android:clipToPadding="false"
+                android:paddingBottom="56dp" />
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="none">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        android:id="@+id/MemoriesTextRecyclerView" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        android:id="@+id/MemoriesImageRecyclerView" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        android:id="@+id/MemoriesVideoRecyclerView"
+                        android:clipToPadding="false"
+                        android:paddingBottom="56dp" />
+                </LinearLayout>
+            </ScrollView>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:id="@+id/Save"
+                android:visibility="gone"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_margin="16dp"
+                />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:id="@+id/SaveMyRequirements"
+                android:visibility="gone"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_margin="16dp"
+                />
+        </RelativeLayout>
+    </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -239,8 +238,7 @@
         app:itemBackground="@drawable/icon_border"
         app:itemIconSize="35dp"
         app:labelVisibilityMode="labeled"
-        app:menu="@menu/bottom_nav_menu"/>
-
+        app:menu="@menu/bottom_nav_menu" />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/AddMemory"
         android:layout_width="wrap_content"
