--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,8 +11,8 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50dp</item>
         <item name="colorPrimary">@color/dark_blue</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorOnPrimaryContainer">@color/white</item>
+        <item name="colorOnPrimary">@color/dark_blue</item>
+        <item name="colorOnPrimaryContainer">@color/dark_blue</item>
          <item name="statusBarScrim" > @color/dark_blue</item>
 
 
