--- a/app/src/main/res/layout/activity_tourism_places.xml
+++ b/app/src/main/res/layout/activity_tourism_places.xml
@@ -8,6 +8,100 @@
     android:background="@drawable/rauche_rock"
     tools:context=".Activities.TourismPlaces"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/dark_blue"
+        android:id="@+id/Title">
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_arrow_back_24"
+            android:background="@null"
+            android:layout_marginTop="7dp"
+            android:layout_marginLeft="10dp"
+            android:id="@+id/BackButton"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Place Details"
+            android:textSize="23sp"
+            android:textStyle="bold"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/white"
+            />
+    </LinearLayout>
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
+        android:id="@+id/CategoryScroll">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="105dp">
+            <ImageButton
+                android:id="@+id/TouristAttraction"
+                android:layout_width="75dp"
+                android:layout_height="40dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:background="@drawable/categoriesborder"
+                android:scaleType="fitCenter"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/baseline_castle_24"
+                android:adjustViewBounds="true"/>
+
+            <ImageButton
+                android:id="@+id/Museums"
+                android:layout_width="75dp"
+                android:layout_height="40dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/categoriesborder"
+                android:scaleType="fitCenter"
+                android:src="@drawable/baseline_museum_24"
+                android:adjustViewBounds="true"/>
+            <ImageButton
+                android:id="@+id/Religious"
+                android:layout_width="75dp"
+                android:layout_height="40dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/categoriesborder"
+                android:scaleType="fitCenter"
+                android:src="@drawable/baseline_mosque_24"
+                android:adjustViewBounds="true"/>
+            <ImageButton
+                android:id="@+id/Activities"
+                android:layout_width="75dp"
+                android:layout_height="40dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/categoriesborder"
+                android:scaleType="fitCenter"
+                android:src="@drawable/baseline_hiking_24"
+                android:adjustViewBounds="true"/>
+            <ImageButton
+                android:id="@+id/Nature"
+                android:layout_width="75dp"
+                android:layout_height="40dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/categoriesborder"
+                android:scaleType="fitCenter"
+                android:src="@drawable/baseline_nature_24"
+                android:adjustViewBounds="true"/>
+        </LinearLayout>
+    </HorizontalScrollView>
     <androidx.appcompat.widget.SearchView
         android:id="@+id/PlacesearchView"
         android:layout_width="350dp"
@@ -16,16 +110,18 @@
         android:background="@drawable/search_style"
         app:iconifiedByDefault="false"
         app:queryHint="Search Places.."
+        android:layout_below="@+id/Title"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="50dp"
         />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/PlacerecyclerView"
         android:scrollbars="vertical"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="150dp"
         android:paddingBottom="130dp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
